Fucking Erors Solved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
-#spring.datasource.username=postgres
-#spring.datasource.password=zedanesh79
-#
-#spring.datasource.initialization-mode=never
-#
-#spring.jpa.hibernate.ddl-auto=update
-#
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#
-#spring.jpa.show-sql=true
-#spring.thymeleaf.cache=false
-#version=3.0.0
-spring.profiles.active=dev
+spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
+spring.datasource.username=postgres
+spring.datasource.password=zedanesh79
+
+spring.datasource.initialization-mode=never
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+version=3.0.0
