--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/pma-springbootdb
 spring.datasource.username=postgres
 spring.datasource.password=zedanesh79
-
 spring.datasource.initialization-mode=never
-
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-version=3.0.0
+spring.jpa.show-sql=true
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=true
+#spring.thymeleaf.cache=false
+#jdbc.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+
+version=3.3.3
